done all without content

--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -2,12 +2,16 @@
   <div class="container_inner">
     <div class="header_wrapp">
       <div class="logo_wrapp">
-        <img class="logo_main" src="../../img/logo.svg" alt="" />
-        <img
-          class="logo_inverse"
-          src="../../img/logo-without-text.svg"
-          alt=""
-        />
+        <a href="#main_page">
+          <img class="logo_main" src="../../img/logo.svg" alt="" />
+        </a>
+        <a href="#main_page">
+          <img
+            class="logo_inverse"
+            src="../../img/logo-without-text.svg"
+            alt=""/>
+        </a>
+
       </div>
 
       <div class="btns-wrapper">
