--- a/src/html/components/sidenav.html
+++ b/src/html/components/sidenav.html
@@ -37,30 +37,29 @@
     <div class="uk-width-1-2@s nav-wrapper">
       <ul class="uk-nav-primary" uk-nav>
         <li class="uk-parent">
-          <a class="parent-link" href="#"
+          <a class="parent-link" href="#about"
             >О компании<span uk-nav-parent-icon></span
           ></a>
           <ul class="uk-nav-sub">
-            <li><a href="#">Преймущества работы с нами</a></li>
-            <li><a href="#">Наши достижения</a></li>
+            <li><a href="#advateges">Преймущества работы с нами</a></li>
+            <li><a href="#achievement">Наши достижения</a></li>
           </ul>
         </li>
         <li class="uk-parent">
-          <a class="parent-link" href="#"
+          <a class="parent-link" href="#partner"
             >Партнеры<span uk-nav-parent-icon></span
           ></a>
           <ul class="uk-nav-sub">
-            <li><a href="#">Sub item</a></li>
-            <li><a href="#">Sub item</a></li>
-            <li><a href="#">Sub item</a></li>
-            <li><a href="#">Sub item</a></li>
-            <li><a href="#">Sub item</a></li>
-            <li><a href="#">Sub item</a></li>
+            <li><a href="https://www.pernod-ricard.com/en">Pernod-Ricard</a></li>
+            <li><a href="https://www.pernod-ricard.com/en">Pernod-Ricard</a></li>
+            <li><a href="https://www.pernod-ricard.com/en">Pernod-Ricard</a></li>
+            <li><a href="https://www.pernod-ricard.com/en">Pernod-Ricard</a></li>
           </ul>
         </li>
-        <li><a href="#">Предложение по дистрибуции</a></li>
-        <li><a href="#">Как мы работаем</a></li>
-        <li><a href="#">Больше чем дистрибуция</a></li>
+        <li><a href="#distribution_offer">Предложение по дистрибуции</a></li>
+        <li><a href="#how-we-work">Как мы работаем</a></li>
+        <li><a href="#more_distribution">Больше чем дистрибуция</a></li>
+        <li><a href="#footer">Контакты</a></li>
       </ul>
     </div>
   </div>
