--- a/src/html/layouts/main.html
+++ b/src/html/layouts/main.html
@@ -24,6 +24,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="../../img/logo-without-text-black.svg" type="image/x-icon">
   </head>
   <body>
     {% include "components/header.html" %}
@@ -41,7 +42,7 @@
     <script src="./js/jquery.maskedinput.min.js"></script> -->
 
     <script src="./js/script.js"></script>
-    <script src="./js/moduls-js/header.js"></script>
+    <script src="./js/moduls-js/header.js" type="module"></script>
     <script src="./js/imports.js" type="module"></script>
   </body>
 </html>
