--- a/src/scss/blocks/_about.scss
+++ b/src/scss/blocks/_about.scss
@@ -6,7 +6,7 @@
   .title {
     color: color(light);
     text-align: center;
-    padding-bottom: 0;
+    margin: 0;
   }
   .about_list {
     padding: 0;
@@ -23,6 +23,7 @@
   .about {
     .title{
       margin-bottom: 20px;
+      padding-bottom: 0;
     }
     .about_list p{
       @include fontSize(15)
