--- a/src/scss/blocks/_main-page.scss
+++ b/src/scss/blocks/_main-page.scss
@@ -1,15 +1,15 @@
 .main_page {
-  background-image: url("/img/main-bg.png");
   height: 100vh;
   width: 100%;
   position: relative;
-  z-index: 0;
-  background-color: color(main);
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-size: cover;
-  transform-style: preserve-3d;
-  perspective: 1px;
+  &.lazy-background{
+    background-image: url("/img/main-bg.png");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: 0;
+    background-color: color(main);
+  }
   h1 {
     color: color(light);
     margin: 0;
