done all, fix first page & added text & photo

--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -15,21 +15,21 @@
               <h4 class="c-nav-tool_title">Меню</h4>
               <ul class="c-nav-tool_list">
                 <li>
-                  <a href="/collections/all" class="c-link">О нас</a>
+                  <a href="#about" class="c-link">О нас</a>
                 </li>
 
                 <li>
-                  <a href="/pages/about-us" class="c-link">Партнеры</a>
+                  <a href="#partner" class="c-link">Партнеры</a>
                 </li>
 
                 <li>
-                  <a href="/blogs/community" class="c-link">Диструбуция</a>
+                  <a href="#more_distribution" class="c-link">Дистрибуция</a>
                 </li>
                 <li>
-                  <a href="#" class="c-link">Как работаем</a>
+                  <a href="#how_we_work" class="c-link">Как работаем</a>
                 </li>
                 <li>
-                  <a href="#" class="c-link">Больше чем</a>
+                  <a href="#more_distribution" class="c-link">Больше чем</a>
                 </li>
               </ul>
             </nav>
@@ -40,21 +40,21 @@
               <h4 class="c-nav-tool_title">Контакты</h4>
               <ul class="c-nav-tool_list">
                 <li class="c-nav-tool_item">
-                  <a href="">
+                  <a href="tel:87122303640">
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="currentColor" d="M13 9h-2v2h2zm4 0h-2v2h2zm3 6.5c-1.25 0-2.45-.2-3.57-.57a1.02 1.02 0 0 0-1.02.24l-2.2 2.2a15.074 15.074 0 0 1-6.59-6.58l2.2-2.21c.28-.27.36-.66.25-1.01A11.36 11.36 0 0 1 8.5 4c0-.55-.45-1-1-1H4c-.55 0-1 .45-1 1c0 9.39 7.61 17 17 17c.55 0 1-.45 1-1v-3.5c0-.55-.45-1-1-1M19 9v2h2V9z"/></svg>
-                    tooadjip@mail.ru
+                      +7 (712) 230-36-40
                   </a>
                 </li>
 
                 <li class="c-nav-tool_item">
-                  <a href="">
+                  <a href="mailto:info@adjip.kz">
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="currentColor" d="M22 4H2v16h20zm-2 4l-8 5l-8-5V6l8 5l8-5z"/></svg>
-                    8-701-721-58-07
+                    Info@adjip.kz
                   </a>
                 </li>
 
                 <li class="c-nav-tool_item">
-                  <a href="">
+                  <a href="https://www.google.com/maps/place/%D0%90%D1%82%D0%B8%D1%80%D0%B0%D1%83,+%D0%9A%D0%B0%D0%B7%D0%B0%D1%85%D1%81%D1%82%D0%B0%D0%BD/@47.0972567,51.7711491,11z/data=!3m1!4b1!4m6!3m5!1s0x41a3ea26f5b2dd0d:0x3e4a125c0e268d2d!8m2!3d47.0944959!4d51.9238373!16zL20vMDE1MXN4?hl=uk-UK&entry=ttu">
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="currentColor" d="M12 1C7.59 1 4 4.59 4 9c0 5.57 6.96 13.34 7.26 13.67l.74.82l.74-.82C13.04 22.34 20 14.57 20 9c0-4.41-3.59-8-8-8m0 19.47C9.82 17.86 6 12.54 6 9c0-3.31 2.69-6 6-6s6 2.69 6 6c0 3.83-4.25 9.36-6 11.47m-1.53-9.3L8.71 9.4l-1.42 1.42L10.47 14l6.01-6.01l-1.41-1.42z"/></svg>
                     Казахстан,
                     г.Атырау
