--- a/src/html/components/registration-form.html
+++ b/src/html/components/registration-form.html
@@ -3,7 +3,7 @@
 </button>
 
 <div class="registration_modal nj_modal" id="modal-registration-form" uk-modal>
-  <div class="modal uk-modal-dialog uk-modal-body uk-text-center">
+  <div class="modal uk-modal-dialog uk-margin-auto-vertical uk-modal-body uk-text-center">
     <div class="title_wrapper">
       <button
         class="uk-modal-close uk-icon uk-close close-btn"
