--- a/src/html/components/sidenav.html
+++ b/src/html/components/sidenav.html
@@ -57,7 +57,7 @@
           </ul>
         </li>
         <li><a href="#distribution_offer">Предложение по дистрибуции</a></li>
-        <li><a href="#how-we-work">Как мы работаем</a></li>
+        <li><a href="#how_we_work">Как мы работаем</a></li>
         <li><a href="#more_distribution">Больше чем дистрибуция</a></li>
         <li><a href="#footer">Контакты</a></li>
       </ul>
