--- a/src/scss/blocks/_achievement.scss
+++ b/src/scss/blocks/_achievement.scss
@@ -61,7 +61,8 @@
   width: 100%;
   height: 100%;
   opacity: 0;
-  background: rgba(0, 0, 0, 0.813);
+  background: $light;
+  object-fit: contain;
 }
 
 .achievement .achievement_images img.visible {
