--- a/src/scss/blocks/_partner.scss
+++ b/src/scss/blocks/_partner.scss
@@ -12,7 +12,7 @@
   }
   .overlay-bg {
     position: absolute;
-    height: 85%;
+    height: 90%;
     width: 100%;
     background-color: color(light-bg);
     transform: translate(10%, -10%);
@@ -26,11 +26,23 @@
     color: color(main-dark);
   }
   .uk-card-body p {
-    margin: 5px 0;
+    margin: 15px 0 20px;
+    height: 100px;
+    @include fontSize(15)
+  }
+  .uk-slider-items li{
+    a{
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      z-index: 1;
+      cursor: pointer;
+    }
   }
   .uk-card-body .uk-card-title {
     margin-bottom: 0;
     color: color(main-dark);
+    font-weight: 600;
   }
   .uk-card-body .card-link-read {
     color: color(main-dark);
@@ -50,13 +62,17 @@
   .parters_arrow_wrapp {
     position: relative;
     transform: translate(-2%, -2%);
-    padding-top: 30px;
+    padding-top: rem(30px);
     a {
       border: 1px solid color(main);
       border-radius: 50%;
-      padding: 14.97px 17.72px 15px 18.17px;
+      padding: rem(15px) rem(18px);
       position: relative;
       display: inline-block;
+      display: flex;
+      place-items: center;
+      backdrop-filter: blur(7px);
+
       svg {
         width: 15px;
         height: 15px;
@@ -74,6 +90,18 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
+    li p{
+      margin-top: 10px;
+      @include fontSize(16)
+    }
+    li h4{
+      margin-bottom: 0;
+      font-weight: 500;
+      @include fontSize(24)
+    }
+    li p{
+      opacity: .8;
+    }
   }
 }
 
@@ -148,7 +176,9 @@
       padding: 0 10px; 
     }
     .uk-card-body p {
-      @include fontSize(13)
+      @include fontSize(13);
+      height: 55px;
+      margin: 5px 0 10px;
     }
     .parters_arrow_wrapp{
       padding-top: 0;
