--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -3,13 +3,13 @@
     <div class="header_wrapp">
       <div class="logo_wrapp">
         <a href="#main_page">
-          <img class="logo_main" src="../../img/logo.svg" alt="" />
+          <img class="logo_main" src="../../img/logo.svg" alt="logo" />
         </a>
         <a href="#main_page">
           <img
             class="logo_inverse"
             src="../../img/logo-without-text.svg"
-            alt=""/>
+            alt="logo inverse"/>
         </a>
 
       </div>
