--- a/src/html/components/sign-in-form.html
+++ b/src/html/components/sign-in-form.html
@@ -77,15 +77,20 @@
 <div class="nj_modal first-modal" id="first-modal" uk-modal="bg-close: false">
   <div class="modal uk-modal-dialog uk-margin-auto-vertical uk-modal-body uk-text-center">
     <div class="title_wrapper">
-      <h2 class="uk-modal-title">Вам исполннилось <span class="uk-text-danger">18 лет?</spanv> </h2>
+      <h2 class="uk-modal-title">Вам исполннилось <span class="">18 лет?</spanv> </h2>
     </div>
     <div class="uk-text-center auth_wrapper btns-wrapper">
       <button 
       class="uk-button uk-button-primary uk-modal-close" type="button"
-      onclick="UIkit.notification({message: '<span uk-icon=\'icon: check\'></span> <span>Отлично, мы рады Вас видеть</span>', status:'success', timeout: '5000' })"
+      onclick="UIkit.notification({message: '<span uk-icon=\'icon: check\'></span> <span> Добро пожаловать</span>', status:'success', timeout: '5000' })"
       >
-        Да, мне есть 18 лет
+        Да, есть 18
       </button>
+        <a href="../../">
+          <button class="uk-button uk-button-danger no" type="button">
+            Нет
+          </button>
+        </a>
     </div>
   </div>
 </div>
