--- a/src/scss/blocks/_achievement.scss
+++ b/src/scss/blocks/_achievement.scss
@@ -33,12 +33,12 @@
   transform: scale(1);
 }
 .uk-list {
-  cursor: none;
+  cursor: ns-resize;
 }
 .uk-list li {
   transition: 0.6s ease;
   transform: scale(0.9);
-  cursor: none;
+  cursor: ns-resize;
 }
 
 .achievement .achievement_images {
