--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -45,6 +45,8 @@
       @include fontSize(24);
       opacity: .9;
       display: block;
+      position: relative;
+      left: -35px;
     }
   }
   a:hover {
@@ -179,6 +181,8 @@
 @media (max-width: 1650px){
   .footer .title_wrapp .title{
     text-align: left;
+    padding: 0 0 0 56px;
+
   }
 
   .footer .title_wrapp .title span{
@@ -188,7 +192,6 @@
 @media (max-width: 1250px){
   .footer .title_wrapp .title span{
     @include fontSize(24px);
-    position: static;
   }
   .footer .w-70 {
     width: 40%;
@@ -208,9 +211,13 @@
       padding: 20px 20px 0;
     }
     .title_wrapp{
+      display: flex;
+      justify-content: center;
+      align-item: center;
       height: 100px;
       &::before{
-        width: 25%;
+        width: 35%;
+        height: 130px;
       }
     }
     .footer_inner{
@@ -264,16 +271,20 @@
   }
   .footer .title_wrapp .title{
     position: absolute;
-    top: 0;
-    padding-left: 30%;
+    top: 25%;
+    padding-left: 0%;
     letter-spacing: 2px;
     width: 75%;
     text-align: center;
+    transform: translateX(-50%);
+    right: -25%;
+    font-size: 1.8rem;
     span{
       position: relative;
       bottom: -30%;
-      @include fontSize(20, 16);
+      @include fontSize(16, 16);
       padding: 0;
+      left: 0;
     }
   }
   .footer svg {
